--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memory-cache",
+  "name": "in-memory-cache",
   "version": "0.0.1",
   "description": "Really simple in-memory cache",
   "main": "memory-cache.js",
