--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "in-memory-cache",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Really simple in-memory cache",
   "main": "memory-cache.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "2npm": "publish"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "publish": "0.5.0"
   }
 }
